--- a/src/App.css
+++ b/src/App.css
@@ -70,16 +70,17 @@
   width: 600px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  align-items: center;
   background-color:#07065a;
   border-radius: 5px;
   padding: 30px 0px 30px 0px;
 }
 
 .list-row{
-  width: 90%;
+  width: 600px;
   display: flex;
+  background-color:#07065a;
+  border-radius: 5px;
+  padding: 15xpx 0px 15px 0px;
   justify-content: space-between;
   align-items: center;
   border-radius: 5px;
@@ -100,4 +101,12 @@
   font-size: 20px;
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
+  margin-right: 20px;
+}
+.heading{
+  margin-bottom: 20px;
+}
+
+.item{
+  margin-left: 20px;
 }
