--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
   flex-direction: column;
   align-items: center;
   min-height: 100vh;
-  background-color: #6a3fe0;
+  background-image: linear-gradient(to bottom right,rgb(218, 50, 218),rgb(59, 51, 172), rgb(120, 24, 158), rgb(27, 27, 129));
 }
 
 .form-container{
@@ -66,21 +66,13 @@
   background-color: red;
 }
 
-.list-main{
-  width: 600px;
-  display: flex;
-  flex-direction: column;
-  background-color:#07065a;
-  border-radius: 5px;
-  padding: 30px 0px 30px 0px;
-}
 
 .list-row{
   width: 600px;
   display: flex;
   background-color:#07065a;
   border-radius: 5px;
-  padding: 15xpx 0px 15px 0px;
+  padding: 20px 0px 20px 0px;
   justify-content: space-between;
   align-items: center;
   border-radius: 5px;
@@ -92,16 +84,14 @@
 }
 
 .del-btn{
-  width: 100px;
-  height: 50px;
+
   border-radius: 5px;
-  background-color:#D2042D;
   border: none;
-  color: white;
   font-size: 20px;
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
-  margin-right: 20px;
+  background-color:#07065a;
+  margin: 20px;
 }
 .heading{
   margin-bottom: 20px;
@@ -109,4 +99,14 @@
 
 .item{
   margin-left: 20px;
+}
+
+.check-btn{
+  background-color: blue;
+  border: none;
+  margin: 20px;
+}
+
+::placeholder{
+  color:black;
 }
